# rust-auto-gippity-full-code

./: Cargo.toml  README.md
schemas/: api_schema.json
src/: main.rs
src/ai_functions/: aifunc_architect.rs  aifunc_backend.rs  aifunc_managing.rs  mod.rs
src/apis/: call_request.rs  mod.rs
src/helpers/: command_line.rs  general.rs  mod.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs  mod.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs  mod.rs
src/models/agents_manager/: managing_agent.rs  mod.rs
src/models/general/: llm.rs
